# hpenc

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
benchmark/: benchmark.sh
doc/: Makefile  graph.py  hpenc.1  hpenc.1.md
sodium/: Makefile  auth_poly1305_donna.c  chacha.h  crypto_stream_chacha20.h  export.h  onetimeauth_poly1305.c  stream_chacha20_api.c  stream_chacha20_ref.c  stream_xchacha20.c  verify_16.c
src/: Makefile  aead.cc  aead.h  aligned_alloc.h  common.h  decrypt.cc  decrypt.h  encrypt.cc  encrypt.h  kdf.cc  kdf.h  main.cc  nonce.cc  nonce.h  thread_pool.h  util.cc  util.h
